--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="includes.js"></script>
+    <script src="utilities.js"></script>
+    <script src="spritesmith.js" type="module"></script>
     <script src="renderer.js"></script>
   </body>
 </html>
